# cognite-azure-iot-hub-device-extractor

./: .gitignore  Dockerfile  config.yaml  pyproject.toml  requirements.txt
cognite_azure_iot_hub_device_extractor/: __main__.py  config.py  extractor.py
